--- a/occupancy-tracker/src/App.css
+++ b/occupancy-tracker/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+body {
+  background-color: lightgrey;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +39,34 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#list-body {
+  margin: auto;
+  width: 50%;
+  height: 100%;
+  background-color: white;
+  padding: none;
+  margin: none;
+}
+
+#list-body ul{
+  list-style-type: none;
+  padding-inline-start: 0;
+}
+
+#list-body li{
+  border-bottom: 1px solid lightgrey;
+  padding: 25px;
+  margin:none;
+  background-color: #007AA0;
+  color: white;
+}
+
+.Collapsible__contentInner {
+  margin-top: 5%;
+}
+
+.building-info ul{
+  list-style-type: disc;
 }
