routing for admin page

--- a/occupancy-tracker/src/App.scss
+++ b/occupancy-tracker/src/App.scss
@@ -167,3 +167,8 @@ body {
   // background-color: #cfe096;
   background-color: #fcfff2;
 }
+
+.admin {
+  padding: 20px;
+  background-color: white;
+}
